<resources>
    <string name="app_name">UILibrary</string>
    <string name="national">국가</string>
    <string-array name="spinner_nation">
        <item>필리핀</item>
        <item>태국</item>
        <item>베트남</item>
    </string-array>
    <string name="howto_send">송금 수단</string>
    <string-array name="spinner_howto">
        <item>BANK</item>
        <item>PICKUP</item>
    </string-array>
    <string name="bank">은행</string>
    <string-array name="spinner_bank">
        <item>A Bank</item>
        <item>B Bank</item>
        <item>C Bank</item>
        <item>D Bank</item>
        <item>E Bank</item>
        <item>F Bank</item>
    </string-array>
    <string name="account">계좌번호</string>
    <string name="name">이름</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="email">이메일</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="send_money">보내는 금액</string>
    <string name="receive_money">받는 금액</string>
</resources>
