<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national"
                android:textColor="@color/colorPrimary"
                android:id="@+id/nationText"/>

            <com.beardedhen.androidbootstrap.BootstrapDropDown
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/nationText"
                app:showOutline="true"
                app:bootstrapSize="lg"
                app:dropdownResource="@array/spinner_nation"
                app:roundedCorners="true"
                app:bootstrapBrand="primary"
                app:bootstrapText=" "
                android:id="@+id/nationSpinner"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howto_send"
                android:id="@+id/howtoSendText"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/nationSpinner"/>

            <com.beardedhen.androidbootstrap.BootstrapDropDown
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/howtoSendText"
                app:showOutline="true"
                app:dropdownResource="@array/spinner_howto"
                app:bootstrapSize="lg"
                app:bootstrapBrand="primary"
                app:bootstrapText=" "
                app:roundedCorners="true"
                android:id="@+id/howtoSpinner"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:id="@+id/bankText"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/howtoSpinner"/>

            <com.beardedhen.androidbootstrap.BootstrapDropDown
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bankText"
                android:layout_marginTop="5dp"
                app:showOutline="true"
                app:dropdownResource="@array/spinner_bank"
                app:bootstrapSize="lg"
                app:bootstrapBrand="primary"
                app:bootstrapText=" "
                app:roundedCorners="true"
                android:id="@+id/bankSpinner"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:id="@+id/accountText"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/bankSpinner"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/accountText"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/account"
                app:roundedCorners="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                android:id="@+id/accountEt"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:id="@+id/nameText"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/accountEt"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameText"
                android:layout_marginTop="10dp"
                android:hint="영문 성명"
                app:roundedCorners="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                android:id="@+id/nameEt"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:id="@+id/numberText"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/nameEt"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numberText"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                app:roundedCorners="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                android:id="@+id/numberEt"/>

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000"
                android:id="@+id/emailText"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/numberEt"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailText"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:roundedCorners="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                android:id="@+id/emailEt"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/okBtn"
                android:layout_below="@+id/emailEt"
                android:layout_marginTop="40dp"
                android:text="@string/ok"
                android:layout_alignParentRight="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:roundedCorners="true"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelBtn"
                android:layout_below="@+id/emailEt"
                android:layout_marginTop="40dp"
                android:text="@string/cancel"
                android:layout_alignParentLeft="true"
                app:bootstrapBrand="danger"
                app:bootstrapSize="lg"
                app:roundedCorners="true"/>
        </RelativeLayout>
    </ScrollView>

</layout>
